<resources>
    <!-- -->
    <string name="app_name">My Application</string>

    <!--Menu Strings -->
    <string name="Menu_AddButton">Add Recipe</string>
    <string name="Menu_SettingsButton">Settings</string>
    <!--Summary-->
    <string name="Summary_TitleText">Title</string>
    <string name="Summary_PrepText">Prep</string>
    <string name="Summary_YieldText">Yield</string>
    <!--AddRecipe-->
    <string name="AddRecipe_TitleText">Title:</string>
    <string name="AddRecipe_PrepText">Prep:</string>
    <string name="AddRecipe_YieldText">Yield:</string>
    <string name="AddRecipe_AddIngredientButton">Add Ingredient</string>
    <string name="AddRecipe_HomeButton">Home</string>
    <string name="AddRecipe_SaveButton">Save</string>
    <string name="AddRecipe_ListTag">Ingredients:</string>
    <string name="AddRecipe_AddPrepButton">Add Step</string>
    <string name="AddRecipe_prepTag">Cooking Steps:</string>
    <!--AddPrep-->
    <string name="AddPrep_LabelText">Cooking Steps</string>
    <string name="AddPrep_AddStepButton">Add Step</string>
    <string name="AddPrep_saveButton">Save</string>
    <!--AddIngredient-->
    <string name="AddIngredient_CancelButton">cancel</string>
    <string name="AddIngredient_NameText">Name</string>
    <string name="AddIngredient_AmountText">Amount</string>
    <string name="AddIngredient_QuantityText">Quantity</string>
    <string name="AddIngredient_MeasureText">Measure</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Summary_EditButton">Edit</string>
    <string name="Summary_CookButton">Cook</string>
    <string name="Summary_HomeButton">Home</string>
    <string name="CookMode_Button">Back</string>
    <string name="CookMode_ForwardButton">Start</string>
    <string name="CookMode_TimerButton">Start</string>
    <string name="enter_cooking_step">Enter Cooking Step</string>
    <string name="ingredient_name">Ingredient Name:</string>
    <string name="ingredient_quantity">Ingredient Quantity:</string>
    <string name="ingredient_measure">Ingredient Measure</string>


</resources>
