<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.maffro.myapplication.AddRecipe"
    android:background="#999999">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_above="@+id/linearLayout6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="347dp"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnCount="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/TitleText"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/AddRecipe_TitleText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleText"
                            android:inputType="text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/YieldText"
                            android:text="@string/AddRecipe_YieldText" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:maxLength="3"
                            android:id="@+id/yieldText"
                            android:layout_gravity="fill_horizontal" />
                    </GridLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearLayout7" >

                        <Button
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/button2"
                            android:text="@string/AddRecipe_AddIngredientButton" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textView12"
                            android:layout_gravity="right"
                            android:text="@string/AddRecipe_ListTag" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout9"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="1" >

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/ingredientListView" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/addPrepButton"
                            android:text="@string/AddRecipe_AddPrepButton" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/addPrepTag"
                            android:layout_gravity="end"
                            android:text="@string/AddRecipe_prepTag" />

                    </LinearLayout>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/prepListView" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout6"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeToMenu"
            android:layout_gravity="bottom"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/AddRecipe_HomeButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveRecipeButton"
            android:onClick="ButtonClickSave"
            android:layout_marginRight="76dp"
            android:layout_marginEnd="76dp"
            android:text="@string/AddRecipe_SaveButton" />
    </LinearLayout>

</RelativeLayout>
